# biberplus

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bibermda/: __init__.py
bibermda/analyzer/: __init__.py
bibermda/modeling/: Predict author from dimensions.ipynb  Predict the dataset from dimensions.ipynb  evaluation.py
bibermda/reducer/: calculate_dimensions.py  constants.py  corpus_statistics.py  pca_reducer.py  text_encoder.py
bibermda/tagger/: Dev.ipynb  Sample MAT tags.ipynb  __init__.py  biber_plus_tagger.py  biber_run_order.py  biber_tagger.py  config.yaml  constants.py  data_io.py  function_words_tagger.py  grieve_clarke_tagger.py  run_order.py  tag_frequencies.py  tag_helper.py  tagger.py  tagger_parallel.py  tagger_utils.py  trf_config.yaml  word_tagger.py
bibermda/tagger/constants/: function_words.txt
biberplus/: __init__.py
biberplus/reducer/: __init__.py  factor_reducer.py  pca_reducer.py  text_encoder.py
biberplus/tagger/: __init__.py  biber_plus_tagger.py  biber_run_order.py  constants.py  data_io.py  function_words_tagger.py  tag_frequencies.py  tag_helper.py  tagger.py  tagger_utils.py
corpora_tagging/: Reddit.ipynb  Tag Reddit.ipynb  binary_tags_order.txt  data_partitioner.py  data_partitioner_jsonl.py  parallel_tagging.py  parallel_tagging_jsonl.py  reddit_year.sh  tag_reddit.ipynb  test.sh
data/: amazon_sample_tags.tsv  brown_sample_tags.tsv
examples/: Function Words PCA.ipynb  Tagger Example.ipynb  Tagger Examples.ipynb
experiments/pan/: Neurobiber Random Forest.ipynb  RoBERTa Baseline.ipynb  tag_pan_small.py
experiments/performance/: Time Comparison.ipynb  Visualize.ipynb  biber_plus.py  data_utils.py  neurobiber.py
experiments/register_variation/: Core Corpus PCA.ipynb  tag_core_corpus.py
modeling/: model_utils.py  trainer_utils.py
modeling/biberta/: collator.py  main.py  models.py  train.sh
modeling/build_datasets/: combine_datasets.py  curate_dataset.py
modeling/build_datasets/contrastive/: Build Datasets.ipynb  align.py  convert_to_datasets.py  main.py  merge.py  partition.py
modeling/build_datasets/multilingual/: CommonCrawl Dataset.ipynb  Reddit Spanish Sample.ipynb  spanish_subreddit_sampling.py
modeling/contrastive_training/: collator.py  evaluation.py  losses.py  main.py  models.py
modeling/neurobiber/: 2 - Fine-tune LLM.ipynb  Test Results.ipynb  downsample.py  evaluate.py  prepare_dataset.py  tag_counts.py  tagger.py  train_model.py  train_utils.py
modeling/polybiberta/: collators.py  main.py  models.py  multilingual_trainer_utils.py  train.sh
modeling/tagger/: 0 - Preprocessing.ipynb  1 - Prepare Dataset.ipynb  downsample.py  prepare_dataset.py  train_model.py  train_utils.py
src/analyzer/: Biber Dimensions Sample Visual.ipynb  calculate_dimensions.py  constants.py  corpus_statistics.py
src/features/: utils.py
src/tagger/: Sample MAT tags.ipynb  acronyms.py  data_io.py  doc_tagger.py  run_order.py  simple_word_tagger.py  tag_helper.py  tagger.py  tagger_dependencies.py  tagger_main.py  tagger_no_dependencies.py  tagger_utils.py  word_tagger.py
testing/tagger/: test_additional_features.py  test_adjectives.py  test_adverbials.py  test_complements.py  test_coordination.py  test_doc_level_tags.py  test_downtoners_amps.py  test_everything_else.py  test_lexical_classes.py  test_lexical_specificity.py  test_modals.py  test_negations.py  test_nominal_forms.py  test_nouns.py  test_participials.py  test_passives.py  test_place_time_adverbials.py  test_prep_adj_adverbs.py  test_pronouns_proverbs.py  test_questions.py  test_reduced_forms_dispreferred_structures.py  test_relative_clauses.py  test_specialized_verbs.py  test_stative_forms.py  test_subordination_features.py  test_subordinators.py  test_tense_aspect_markers.py  test_verbs.py
tests/tagger/: test_additional_features.py  test_coordination.py  test_lexical_classes.py  test_lexical_specificity.py  test_modals.py  test_negations.py  test_nominal_forms.py  test_passives.py  test_place_time_adverbials.py  test_prep_adj_adverbs.py  test_pronouns_proverbs.py  test_questions.py  test_reduced_forms_dispreferred_structures.py  test_specialized_verbs.py  test_stative_forms.py  test_subordination_features.py  test_tense_aspect_markers.py
(+7 files in other folders)
